# tank-rpg

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
assets/config/: server_addr.txt
src/: assets.rs  bullet.rs  camera.rs  client_input.rs  environment.rs  input_helper.rs  lib.rs  main.rs  object.rs  physics.rs  player.rs  sprite_updater.rs  utils.rs
src/asset_loader/: components.rs  mod.rs  resources.rs  system.rs
src/client_networking/: mod.rs  systems.rs
src/client_networking/client_input/: mod.rs  systems.rs
src/client_ui/: client_debug.rs  health.rs  leaderboard.rs  main_menu.rs  match_end_screen.rs  match_length.rs  minimap.rs  mod.rs
src/client_ui/main_menu/: mod.rs  systems.rs  ui.rs
src/client_ui/match_length/: mod.rs  ui.rs
src/display/: camera.rs  mod.rs  sprite_updater.rs
src/game_plugins/: assets.rs  bullet.rs  camera.rs  environment.rs  input_helper.rs  player.rs
src/networking/: client.rs  events.rs  messages.rs  mod.rs  server.rs
src/networking/client/: debug_ui.rs  health_ui.rs  leaderboard_ui.rs  main_menu.rs  mod.rs  resources.rs  systems.rs
src/networking/client/client_input/: mod.rs  systems.rs
src/networking/server/: broadcast.rs  mod.rs  systems.rs
src/networking/server/systems/: mod.rs  ui.rs
src/object/: components.rs  mod.rs  systems.rs
src/player/: bundles.rs  components.rs  mod.rs  systems.rs  utils.rs
src/prefabs/: mod.rs
src/scenes/: in_game.rs  loading.rs  main_menu.rs  mod.rs
src/scenes/in_game/: mod.rs  systems.rs
src/server_networking/: mod.rs  systems.rs
src/server_ui/: mod.rs  network_visualizer.rs
src/simulation/: events.rs  mod.rs
src/simulation/client_sim/: mod.rs  systems.rs
src/simulation/server_sim/: bullet.rs  init.rs  match_ffa.rs  mod.rs  physics.rs  spawn.rs
src/simulation/server_sim/match_ffa/: mod.rs  systems.rs
src/simulation/server_sim/player/: components.rs  mod.rs  movement_state_machine.rs  systems.rs  utils.rs
src/utils/: despawn.rs  messages.rs  mod.rs  ndc.rs  networking.rs  try_insert.rs  ui.rs
src/utils/commands/: despawn.rs  mod.rs
src/utils/math/: mod.rs  polygon.rs  state_machine.rs
src/utils/networking/: messages.rs  mod.rs
src/utils/prefabs/: mod.rs
(+2 files in other folders)
