[package]
name = "tank_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1" }
bevy_rapier2d = "0.20.0"
bevy_renet = "0.0.6"
bevy-inspector-egui = "0.17.0"
bevy_embedded_assets = "0.6.2"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.17.1"
local-ip-address = "0.5.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3