[package]
name = "tank_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["serialize"] }
bevy_rapier2d = "0.21.0"
bevy_quinnet = "0.4.0"
bevy_embedded_assets = "0.7.0"
bevy_egui = "0.20.0"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.17.1"
local-ip-address = "0.5.1"
quinn-proto = "0.9.2"
seldom_state = "0.4.0"
circular-buffer = "0.1.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3